<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_barcode_content_label">Barcode: %1$s</string>
    <string name="about_barcode_format_label">Format: %1$s</string>
    <string name="about_barcode_information_label">Information on barcode</string>
    <string name="about_barcode_label">About barcode</string>
    <string name="about_barcode_origin_label">Origin:</string>
    <string name="action_add_to_calendar">Add to calendar</string>
    <string name="action_add_to_contacts">Add to contacts</string>
    <string name="action_call_phone_label">Call phone number</string>
    <string name="action_go_to_url_label">Go to URL</string>
    <string name="action_open_link">Open link</string>
    <string name="action_product_search_label">Search on %1$s</string>
    <string name="action_send_mail_label">Send Email</string>
    <string name="action_send_sms_label">Send SMS</string>
    <string name="action_show_location">Show location</string>
    <string name="action_title_dialog_label">What do you want to do?</string>
    <string name="action_web_search_label">Search on the web</string>
    <string name="action_wifi_add_network_already_exists">You already added this Wi-Fi network.</string>
    <string name="action_wifi_add_network_failed">Failure while adding Wi-Fi network.</string>
    <string name="action_wifi_add_network_refused">Adding Wi-Fi connection refused.</string>
    <string name="action_wifi_add_network_successful">Wi-Fi network added.</string>
    <string name="action_wifi_add_network_unknown_error">Unknown error while adding Wi-Fi network.</string>
    <string name="action_wifi_already_added_label">Wi-Fi connection already added</string>
    <string name="action_wifi_connection_error_wifi_not_activated">You must activate Wi-Fi on your device!</string>
    <string name="action_wifi_connection_from_app">Connect to Wi-Fi</string>
    <string name="action_wifi_connection_from_wifi_settings">Copy password and go to Wi-Fi settings</string>
    <string name="action_wifi_connection_title_label">Wi-Fi connection</string>
    <string name="action_wifi_failure_added_label">Failure while adding Wi-Fi connection</string>
    <string name="action_wifi_password_copy_label">Password copied!</string>
    <string name="action_wifi_success_added_label">Wi-Fi connection added!</string>
    <string name="actions_label">Actions</string>
    <string name="additive_no_information_found_label">No information found on this additive!</string>
    <string name="additives_label">Additives</string>
    <string name="allergens_label">Allergens</string>
    <string name="amazon_label">Amazon</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation_activity_transition">AnimationActivityTransition</string>
    <string name="app_name">Barcode Scanner</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bar_code_analysis_label">Barcode analysis</string>
    <string name="bar_code_codabar_description_label">Code Codabar is a bar code designed to be read by dot matrix printers. Today, Codabar is little used for the benefit of other bar codes types, but is still used by some organisations like libraries.</string>
    <string name="bar_code_code_128_description_label">Code 128 is a bar code often used in the industry. It is used in transport industry and for product identification in supply chains. It can also be used in automotive sector or for product marking in pharmacies. Code 128 is widely used and can also be used in many other endings.</string>
    <string name="bar_code_code_39_description_label">Code 39 is a bar code used in textile marking and drugs in pharmacies. It is also used in military sector and automotive industry.</string>
    <string name="bar_code_code_93_description_label">Code 93 is a bar code used in army and automotive sectors, as well as by Postes Canada to encode special deliveries information.</string>
    <string name="bar_code_content_label">Barcode content</string>
    <string name="bar_code_ean_13_description_label">Code EAN-13 (European Article Numbering 13) is a bar code widely used to identify products sold in stores and shops in Europe and pretty much everywhere in the world. It is composed of 13 digits.</string>
    <string name="bar_code_ean_8_description_label">Code EAN-8 (European Article Numbering 8) is a condensed bar code of code EAN-13 used to identify products sold in stores and shops in Europe and pretty much everywhere in the world. It is used on packaging too small to receive code EAN-13.</string>
    <string name="bar_code_industrial_description_label">This type of bar code is often used in the industry.</string>
    <string name="bar_code_itf_description_label">Code ITF (Interleaved 2 of 5) is a bar code mainly used for goods shipments.</string>
    <string name="bar_code_type_beauty">Cosmetic Product</string>
    <string name="bar_code_type_book">Book</string>
    <string name="bar_code_type_food">Food Product</string>
    <string name="bar_code_type_industrial">Industrial Code</string>
    <string name="bar_code_type_name_unknown">Unknown</string>
    <string name="bar_code_type_pet_food">Pet Food</string>
    <string name="bar_code_type_unknown_book_title">Book title unknown</string>
    <string name="bar_code_type_unknown_matrix">Matrix Code</string>
    <string name="bar_code_type_unknown_product">Product</string>
    <string name="bar_code_upc_a_description_label">Code UPC-A (Universal Product Code) is a bar code widely used in USA and Canada to identify products sold in stores and shops. It is composed of 12 digits.</string>
    <string name="bar_code_upc_e_description_label">Code UPC-E (Universal Product Code) is a condensed bar code of code UPC-A mainly used in USA and Canada to identify products sold in stores and shops. It is used on packaging too small to receive code UPC-A.</string>
    <string name="barcode_aztec_label">AZTEC</string>
    <string name="barcode_codabar_label">Codabar</string>
    <string name="barcode_code_128_label">Code 128</string>
    <string name="barcode_code_39_label">Code 39</string>
    <string name="barcode_code_93_label">Code 93</string>
    <string name="barcode_copied_label">Barcode copied</string>
    <string name="barcode_creator_confirm_text_label">Generate</string>
    <string name="barcode_data_matrix_label">Data Matrix</string>
    <string name="barcode_ean_13_label">EAN 13</string>
    <string name="barcode_ean_8_label">EAN 8</string>
    <string name="barcode_found_on_label">Found on %1$s!</string>
    <string name="barcode_information_search_label">Searching…</string>
    <string name="barcode_itf_label">ITF</string>
    <string name="barcode_label">Barcode</string>
    <string name="barcode_not_found_on_api_label">No information found on %1$s!</string>
    <string name="barcode_pdf_417_label">PDF 417</string>
    <string name="barcode_qr_code_label">QR Code</string>
    <string name="barcode_scanned_label">%1$s scanned!</string>
    <string name="barcode_search_error_label">Url not supported</string>
    <string name="barcode_upc_a_label">UPC A</string>
    <string name="barcode_upc_e_label">UPC E</string>
    <string name="base_api_open_beauty_facts_url">https://world.openbeautyfacts.org/api/v0/product/</string>
    <string name="base_api_open_food_facts_url">https://world.openfoodfacts.org/api/v0/product/</string>
    <string name="base_api_open_library_url">https://openlibrary.org</string>
    <string name="base_api_open_pet_food_facts_url">https://world.openpetfoodfacts.org/api/v0/product/</string>
    <string name="bdd_open_beauty_facts_description_label">Open Beauty Facts is a free database about cosmetic products.</string>
    <string name="camera_permission_denied">"You have denied access to the camera.
You must authorize it to scan a barcode."</string>
    <string name="image_view_description_icon">Icon</string>
    <string name="matrix_body_label">Message:</string>
    <string name="matrix_email_bcc_label">BCC:</string>
    <string name="matrix_email_cc_label">CC:</string>
    <string name="matrix_email_recipient_label">Recipient:</string>
    <string name="matrix_subject_label">Subject:</string>
    <string name="matrix_uri_malicious_label">URL may be malicious…</string>
    <string name="matrix_uri_url_label">URL:</string>
    <string name="nutrition_facts_table_label">Nutritional composition</string>
    <string name="off_per_100_label">For 100%1$s</string>
    <string name="off_per_serving_label">Per Serving (%1$s%2$s)</string>
    <string name="qr_code_text_input_edit_text_epc_iban_error">IBAN incorrect</string>
    <string name="qr_code_text_input_edit_text_epc_name_error">\"Name\" field is mandatory</string>
    <string name="qr_code_text_input_edit_text_hint_epc_amount">Amount</string>
    <string name="qr_code_text_input_edit_text_hint_epc_bic">BIC</string>
    <string name="qr_code_text_input_edit_text_hint_epc_iban">IBAN</string>
    <string name="qr_code_text_input_edit_text_hint_epc_information">Information</string>
    <string name="qr_code_text_input_edit_text_hint_epc_name">Name</string>
    <string name="qr_code_text_input_edit_text_hint_epc_purpose">Purpose</string>
    <string name="qr_code_text_input_edit_text_hint_epc_remittance_ref">Remittance (Reference)</string>
    <string name="qr_code_text_input_edit_text_hint_epc_remittance_text">Remittance (Text)</string>
    <string name="save_label">Save</string>
    <string name="scan_information_label">Aim at barcode to scan</string>
    <string name="share_image_label">Share image</string>
    <string name="share_label">Share</string>
    <string name="share_text_label">Share text</string>
    <string name="slider_description_zoom">Zoom</string>
    <string name="title_generate">Generate</string>
    <string name="title_history">History</string>
    <string name="title_scan">Scan</string>
    <string name="title_settings">Settings</string>
</resources>