<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/animated_selector_qr_code_scanner" android:enabled="true" android:id="@id/menu_navigation_bottom_view_scan" android:title="@string/title_scan" />
    <item android:icon="@drawable/animated_selector_history" android:enabled="true" android:id="@id/menu_navigation_bottom_view_history" android:title="@string/title_history" />
    <item android:icon="@drawable/animated_selector_create" android:enabled="true" android:id="@id/menu_navigation_bottom_view_create" android:title="@string/title_generate" />
    <item android:icon="@drawable/animated_selector_settings" android:enabled="true" android:id="@id/menu_navigation_bottom_view_settings" android:title="@string/title_settings" />
</menu>