<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_bic_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_bic" android:layout_alignParentTop="true" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_bic_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="11" android:inputType="textCapCharacters" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_name_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_name" android:layout_below="@id/fragment_form_create_qr_code_epc_bic_input_layout" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_name_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="70" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/fragment_form_create_qr_code_epc_name_error_text_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/light_margin" android:text="@string/qr_code_text_input_edit_text_epc_name_error" android:layout_below="@id/fragment_form_create_qr_code_epc_name_input_layout" style="@style/AppTheme.TextView.Appearance.Standard.Primary.Error" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_iban_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_iban" android:layout_below="@id/fragment_form_create_qr_code_epc_name_error_text_view" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_iban_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="34" android:inputType="textCapCharacters" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/fragment_form_create_qr_code_epc_iban_error_text_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/light_margin" android:text="@string/qr_code_text_input_edit_text_epc_iban_error" android:layout_below="@id/fragment_form_create_qr_code_epc_iban_input_layout" style="@style/AppTheme.TextView.Appearance.Standard.Primary.Error" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_amount_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_amount" android:layout_below="@id/fragment_form_create_qr_code_epc_iban_error_text_view" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_amount_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="12" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_purpose_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_purpose" android:layout_below="@id/fragment_form_create_qr_code_epc_amount_input_layout" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_purpose_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="4" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_remittance_ref_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_remittance_ref" android:layout_below="@id/fragment_form_create_qr_code_epc_purpose_input_layout" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_remittance_ref_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="35" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_remittance_text_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_remittance_text" android:layout_below="@id/fragment_form_create_qr_code_epc_remittance_ref_input_layout" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_remittance_text_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="140" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/fragment_form_create_qr_code_epc_information_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/qr_code_text_input_edit_text_hint_epc_information" android:layout_below="@id/fragment_form_create_qr_code_epc_remittance_text_input_layout" android:layout_alignParentStart="true" style="@style/AppTheme.TextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/fragment_form_create_qr_code_epc_information_input_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="70" android:inputType="text" android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>