<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/fragment_barcode_matrix_uri_url_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/fragment_barcode_matrix_uri_url_label" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/matrix_uri_url_label" style="@style/AppTheme.TextView.Appearance.Title.Variant" />
        <TextView android:id="@id/fragment_barcode_matrix_uri_url_text_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/fragment_barcode_matrix_uri_url_label" style="@style/AppTheme.TextView.Appearance.Standard.Secondary.Italic" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/fragment_barcode_matrix_uri_malicious_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x_large_margin" android:layout_below="@id/fragment_barcode_matrix_uri_url_layout">
        <ImageView android:id="@id/fragment_barcode_matrix_uri_malicious_warning_icon_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_warning_24" android:layout_centerVertical="true" android:contentDescription="@string/image_view_description_icon" app:tint="?android:textColor" />
        <TextView android:id="@id/fragment_barcode_matrix_uri_malicious_text_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/matrix_uri_malicious_label" android:layout_centerVertical="true" android:layout_toEndOf="@id/fragment_barcode_matrix_uri_malicious_warning_icon_image_view" style="@style/AppTheme.TextView.Appearance.Standard.Secondary.Italic" />
    </RelativeLayout>
</RelativeLayout>