<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@id/nutrition_facts_table_wrap_card_view" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@id/fragment_food_analysis_nutrition_facts_table_entitled_row_layout" android:background="?colorPrimary" android:paddingTop="@dimen/light_margin" android:paddingBottom="@dimen/light_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/standard_margin" android:paddingEnd="@dimen/standard_margin">
            <TextView android:textColor="?colorOnPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nutrition_facts_table_label" android:layout_weight="0.3" android:textAlignment="textStart" style="@style/AppTheme.TextView.Appearance.Title.Variant" />
            <TextView android:textColor="?colorOnPrimary" android:id="@id/fragment_food_analysis_nutrition_facts_table_entitled_100_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/off_per_100_label" android:layout_weight="0.3" android:textAlignment="textEnd" style="@style/AppTheme.TextView.Appearance.Title.Variant" />
            <TextView android:textColor="?colorOnPrimary" android:id="@id/fragment_food_analysis_nutrition_facts_table_entitled_serving_text_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/off_per_serving_label" android:layout_weight="0.3" android:textAlignment="textEnd" style="@style/AppTheme.TextView.Appearance.Title.Variant" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView android:id="@id/fragment_food_analysis_nutrition_facts_table_recycler_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/fragment_food_analysis_nutrition_facts_table_entitled_row_layout" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>